Небольшая корректировка поиска бронирований пользователя
ItemServiceImpl.addComment